--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "Youtube clone backend part.",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/index.js"
   },
   "author": "Salim Hossain",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.7"
+  }
 }
