--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Salim Hossain",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "prettier": "^3.3.3"
   }
 }
